--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,31 @@
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!<i class="fa fa-home"></i>
-  </h1>
+<header>
+  <div>
+    <h1>
+      Welcome to {{ title }}!
+      <i class="fa fa-home"></i>
+    </h1>
+  </div>
+</header>
 
-  <div id="map"></div>
+<div class="nav">
+  <ul>
+    <li>323</li><li>123</li><li>123</li>
+    <li>123</li><li>123</li><li>123</li>
+    <li>123</li><li>123</li><li>123</li>
+    <li>123</li><li>123</li><li>123</li>
+  </ul>
+</div>
+
+<div class="app-content">
+
+  
+
+  <div class="page-detail"> 
+    <div id="map"></div>
+  </div>
+
+  <footer>
+    <p>这里是底部</p>
+  </footer>
 </div>
 
