--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,64 +5,13 @@
   left: 0;
   width: 100%;
   height: 70px;
-  background-color: blue;
+  line-height: 70px;
+  background-color: #007bff;
 }
 .header h1 {
-  margin-top: 30px;
+  height: 70px;
+  line-height: 70px;
   color: #fff;
   text-align: center;
-}
-footer {
-  border-top: 1px solid #ccc;
-  text-align: center;
-}
-footer p {
-  line-height: 69px;
-}
-
-.app-content {
-  box-sizing: border-box;
-  height: 100%;
-  padding: 70px 0;
-}
-
-.nav {
-  box-sizing: border-box;
-  position: fixed;
-  z-index: 1500;
-  left: 0;
-  top: 0;
-  width: 200px;
-  height: 100%;
-  padding: 70px 0;
-}
-.nav ul {
-  height: 100%;
-  background-color: #fff;
-  border-right: 1px solid #ccc;
-  overflow-y: auto;
-}
-.nav li {
-  width: 100%;
-  padding: 15px 0;
-  border-bottom: 1px solid #ccc;
-  cursor: pointer;
-  text-align: center;
-}
-
-.page-detail {
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  padding-left: 200px;
-  overflow-y: auto;
-}
-#map {
-  height: 100%;
-  min-height: 500px;
-}
-
-.test {
-  height: 300px;
-  background-color: red;
+  font-size: 20px;
 }
