--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,11 @@
-<p>
-  admin works!
-</p>
+<div class="nav">
+  <ul>
+    <li>123</li>
+    <li>456</li>
+    <li>789</li>
+  </ul>
+</div>
+
+<div class="app-content">
+
+</div>
