--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,11 +1,11 @@
 <div class="nav">
   <ul>
-    <li>123</li>
-    <li>456</li>
-    <li>789</li>
+    <li *ngFor="let menu of menuItem" [routerLink]="[menu.url]">
+      <span>{{ menu.title }}</span>
+    </li>
   </ul>
 </div>
 
 <div class="app-content">
-
+  <router-outlet></router-outlet>
 </div>
