--- a/src/app/admin/data-sources/data-sources.component.html
+++ b/src/app/admin/data-sources/data-sources.component.html
@@ -1,9 +1,9 @@
 <div class="user-manage-wrap">
 
   <div class="add">
-    <h4 class="admin-title">数据源(集合)管理</h4>
+    <h4 class="admin-title">数据源(集合)列表</h4>
     <div class="add-button">
-      <button class="btn btn-primary btn-sm" title="添加用户" (click)="openAddUserModal(AddUser)">
+      <button class="btn btn-primary btn-sm" title="添加用户" (click)="openAddUserModal(Add)">
         <i class="fa fa-plus"></i> 添加
       </button>
     </div>
@@ -34,28 +34,30 @@
   </table>
 </div>
 
-<ng-template #AddUser>
+<ng-template #Add>
   <div class="modal-header">
-    <h4 class="modal-title">新增用户</h4>
-    <button type="button" class="close pull-right" aria-label="Close" (click)="addUserModalRef.hide()">
+    <h4 class="modal-title">新增</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="addModalRef.hide()">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
-    <form formGroup="addUserForm">
+    <form [formGroup]="addUserForm">
       <div class="form-group">
-        <label for="username">用户名:</label>
-        <input type="text" id="username" class="form-control" formControlName="username">
+        <label for="name">集合名称:</label>
+        <input type="text" id="name" class="form-control" formControlName="name">
       </div>
       <div class="form-group">
-        <label for="password">密码:</label>
-        <input type="password" id="password" class="form-control" formControlName="password">
+        <label for="mapList">对应地图名称:</label>
+        <select class="form-control" id="mapList"  formControlName="map">
+          <option *ngFor="let map of mapList" [value]="map.id">{{ map.name }}</option>
+        </select>
       </div>
     </form>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-primary btn-sm">确定</button>
-    <button class="btn btn-default btn-sm" (click)="addUserModalRef.hide()">取消</button>
+    <button class="btn btn-primary btn-sm" (click)="addConfirmation(addUserForm, addUserForm.get('map').value)">确定</button>
+    <button class="btn btn-default btn-sm" (click)="addModalRef.hide()">取消</button>
   </div>
 </ng-template>
 
