--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="header" *ngIf="!isLogin">
+<div class="header" *ngIf="isLogin">
   <h1>{{title}}</h1>
 </div>
 <router-outlet></router-outlet>
