--- a/src/app/admin/type-of-disaster/type-of-disaster.component.html
+++ b/src/app/admin/type-of-disaster/type-of-disaster.component.html
@@ -52,15 +52,15 @@
       </div>
       <div class="form-group">
         <label for="description">描述:</label>
-        <textarea id="description" rows="5" class="form-control" formControlName="description"></textarea>
+        <textarea id="description" class="form-control" formControlName="description"></textarea>
       </div>
       <div class="form-group">
         <label for="levelStandard">等级标准:</label>
-        <textarea id="levelStandard" rows="5" class="form-control" formControlName="levelStandard"></textarea>
+        <textarea id="levelStandard" class="form-control" formControlName="levelStandard"></textarea>
       </div>
       <div class="form-group">
         <label for="comment">备注:</label>
-        <textarea id="comment" rows="5" class="form-control" formControlName="comment"></textarea>
+        <textarea id="comment" class="form-control" formControlName="comment"></textarea>
       </div>
     </form>
   </div>
@@ -85,15 +85,15 @@
       </div>
       <div class="form-group">
         <label for="description1">描述:</label>
-        <textarea id="description1" rows="5" class="form-control" formControlName="description"></textarea>
+        <textarea id="description1" class="form-control" formControlName="description"></textarea>
       </div>
       <div class="form-group">
         <label for="levelStandard1">等级标准:</label>
-        <textarea id="levelStandard1" rows="5" class="form-control" formControlName="levelStandard"></textarea>
+        <textarea id="levelStandard1" class="form-control" formControlName="levelStandard"></textarea>
       </div>
       <div class="form-group">
         <label for="comment1">备注:</label>
-        <textarea id="comment1" rows="5" class="form-control" formControlName="comment"></textarea>
+        <textarea id="comment1" class="form-control" formControlName="comment"></textarea>
       </div>
     </form>
   </div>
