--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,24 @@
 <div class="header" *ngIf="authService.isLogin">
   <h1>{{title}}</h1>
+
+  <!--<div class="menu-item">-->
+    <!--<div class="btn-group" dropdown>-->
+      <!--<button type="button" class="btn btn-primary">Action</button>-->
+      <!--<button type="button" dropdownToggle class="btn btn-primary dropdown-toggle dropdown-toggle-split">-->
+        <!--<span class="caret"></span>-->
+        <!--<span class="sr-only">Split button!</span>-->
+      <!--</button>-->
+      <!--<ul *dropdownMenu class="dropdown-menu" role="menu">-->
+        <!--<li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>-->
+        <!--<li role="menuitem"><a class="dropdown-item" href="#">Another action</a>-->
+        <!--</li>-->
+        <!--<li role="menuitem"><a class="dropdown-item" href="#">Something else-->
+          <!--here</a></li>-->
+        <!--<li class="divider dropdown-divider"></li>-->
+        <!--<li role="menuitem"><a class="dropdown-item" href="#">Separated link</a>-->
+        <!--</li>-->
+      <!--</ul>-->
+    <!--</div>-->
+  <!--</div>-->
 </div>
 <router-outlet></router-outlet>
