--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,6 @@
   left: 0;
   width: 100%;
   height: 70px;
-  line-height: 70px;
   background-color: #007bff;
 }
 .header h1 {
@@ -15,3 +14,12 @@
   text-align: center;
   font-size: 20px;
 }
+.menu-item {
+  position: fixed;
+  top: 15px;
+  right: 15px;
+}
+.dropdown-menu {
+  min-width: 1rem;
+}
+
