--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,19 @@
 <div class="header" *ngIf="authService.isLogin">
   <h1>{{title}}</h1>
 
-  <!--<div class="menu-item">-->
-    <!--<div class="btn-group" dropdown>-->
-      <!--<button type="button" class="btn btn-primary">Action</button>-->
-      <!--<button type="button" dropdownToggle class="btn btn-primary dropdown-toggle dropdown-toggle-split">-->
-        <!--<span class="caret"></span>-->
-        <!--<span class="sr-only">Split button!</span>-->
-      <!--</button>-->
-      <!--<ul *dropdownMenu class="dropdown-menu" role="menu">-->
-        <!--<li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>-->
-        <!--<li role="menuitem"><a class="dropdown-item" href="#">Another action</a>-->
-        <!--</li>-->
-        <!--<li role="menuitem"><a class="dropdown-item" href="#">Something else-->
-          <!--here</a></li>-->
-        <!--<li class="divider dropdown-divider"></li>-->
-        <!--<li role="menuitem"><a class="dropdown-item" href="#">Separated link</a>-->
-        <!--</li>-->
-      <!--</ul>-->
-    <!--</div>-->
-  <!--</div>-->
+  <div class="menu-item">
+    <div class="btn-group" dropdown>
+      <button type="button" class="btn btn-primary">用户名</button>
+      <button type="button" dropdownToggle class="btn btn-primary dropdown-toggle dropdown-toggle-split">
+        <span class="caret"></span>
+        <span class="sr-only">Split button!</span>
+      </button>
+      <ul *dropdownMenu class="dropdown-menu" role="menu">
+        <li role="menuitem"><a class="dropdown-item" href="#">一张图</a></li>
+        <li class="divider dropdown-divider"></li>
+        <li role="menuitem"><a class="dropdown-item" href="#">退出</a></li>
+      </ul>
+    </div>
+  </div>
 </div>
 <router-outlet></router-outlet>
