--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
         <span class="sr-only">Split button!</span>
       </button>
       <ul *dropdownMenu class="dropdown-menu" role="menu">
-        <li role="menuitem"><a class="dropdown-item" href="#">一张图</a></li>
+        <li role="menuitem"><a class="dropdown-item" href="/oneMaps">一张图</a></li>
         <li class="divider dropdown-divider"></li>
         <li role="menuitem"><a class="dropdown-item" href="#">退出</a></li>
       </ul>
