--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,9 +13,10 @@
           <i class="password"></i>
           <input type="password" placeholder="请输入密码" [(ngModel)]="password" name="password" />
         </div>
+
+        <button class="login" (click)="login()">登录</button>
       </form>
 
-      <span class="login" (click)="login()">登录</span>
     </div>
   </div>
 </div>
