--- a/src/app/admin/user-manage/user-manage.component.html
+++ b/src/app/admin/user-manage/user-manage.component.html
@@ -74,7 +74,7 @@
       </div>
       <!--<div class="form-group">-->
         <!--<label for="password1">密码:</label>-->
-        <!--<input type="password" id="password1" class="form-control" formControlName="password">-->
+        <!--<input type="password" id="password1" class="form-control" readonly formControlName="password">-->
       <!--</div>-->
       <!--<div class="form-group">-->
         <!--<label for="password2">确认密码:</label>-->
