--- a/src/app/admin/data-sources/data-sources.component.html
+++ b/src/app/admin/data-sources/data-sources.component.html
@@ -42,7 +42,7 @@
     </button>
   </div>
   <div class="modal-body">
-    <form [formGroup]="addForm">
+    <form [formGroup]="addForm" (submit)="addConfirmation(addForm)">
       <div class="form-group">
         <label for="name">{{ hintText }}名称:</label>
         <input type="text" id="name" class="form-control" formControlName="name">
@@ -51,9 +51,10 @@
         <label>对应地图名称:</label>
         <ng-select  [multiple]="true"
                     [items]="mapList | ngSelect"
-                    (data)="selectedMap($event)"
+                    (data)="selected($event)"
                     placeholder="No selected"></ng-select>
        </div>
+      <button type="submit"></button>
     </form>
   </div>
   <div class="modal-footer">
@@ -70,7 +71,7 @@
     </button>
   </div>
   <div class="modal-body">
-    <form [formGroup]="editForm">
+    <form [formGroup]="editForm" (submit)="editConfirmation(editForm)">
       <div class="form-group">
         <label for="editName">{{ hintText }}名称:</label>
         <input type="text" id="editName" class="form-control" formControlName="name">
@@ -80,7 +81,7 @@
         <ng-select  [multiple]="true"
                     [items]="mapList | ngSelect"
                     [active]="activeMaps | ngSelect"
-                    (data)="selectedMap($event)"
+                    (data)="selected($event)"
                     placeholder="No selected"></ng-select>
       </div>
     </form>
