--- a/src/app/admin/warning-rules/warning-rules.component.html
+++ b/src/app/admin/warning-rules/warning-rules.component.html
@@ -60,8 +60,10 @@
         <input type="text" id="description" class="form-control" formControlName="description">
       </div>
       <div class="form-group">
-        <label for="prewarningLevel">预警等级:</label>
-        <input type="text" id="prewarningLevel" class="form-control" formControlName="prewarningLevel">
+        <label>预警等级:</label>
+        <ng-select  [items]="warningLevelList | ngSelect"
+                    (data)="selected($event)"
+                    placeholder="No selected"></ng-select>
       </div>
       <div class="form-group">
         <label for="disaster">灾害类型:</label>
