--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="login_content">
       <div class="title">张掖应急系统</div>
 
-      <form (submit)="login(username, password)">
+      <form>
         <div class="input_box">
           <i class="username"></i>
           <input type="text" placeholder="请输入用户名" [(ngModel)]="username" name="username" />
