修复登陆bug和接口传token

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,13 @@
         <span class="sr-only">Split button!</span>
       </button>
       <ul *dropdownMenu class="dropdown-menu" role="menu">
-        <li role="menuitem"><a class="dropdown-item" href="/oneMaps">一张图</a></li>
+        <li role="menuitem" routerLink="/oneMaps">
+          <a class="dropdown-item" href="javascript:void(0);">一张图</a>
+        </li>
+        <li class="divider dropdown-divider"></li>
+        <li role="menuitem" routerLink="/admin">
+          <a class="dropdown-item" href="javascript:void(0);">后台管理</a>
+        </li>
         <li class="divider dropdown-divider"></li>
         <li role="menuitem" (click)="loginOut()">
           <a class="dropdown-item" href="javascript:void(0);">退出</a>
